fixed the gaps between the dropdown menu and how it vanished when you went in between the gaps

--- a/intro-section-with-dropdown-navigation-main/remake.css
+++ b/intro-section-with-dropdown-navigation-main/remake.css
@@ -116,9 +116,10 @@ transition: all 0.2s ease;
 #company ul {
     background: rgb(255, 255, 255);
     border-radius: 20px;
+    position: relative;
 }
 #features svg {
-        padding-left: 5px;
+    padding-left: 5px;
 }
 #company svg {
     padding-left: 5px;
@@ -128,6 +129,8 @@ transition: all 0.2s ease;
     display: none;
     /* background: white; */
     border-radius: 20px;
+    justify-content: center;
+    text-align: center;
 }
 
 #company:hover ul li  {
@@ -150,15 +153,19 @@ transition: all 0.2s ease;
 }
 
 #features ul {
-    /* background: white; */
+    background: white;
     border-radius: 20px;
+    position: relative;
+    
 }
 
 #features ul li {
     display: none;
     background: white;
     border-radius: 15px;
-    
+    justify-content: center;
+    text-align: center;
+    padding: 10px;
 }    
 
 #features:hover ul li {
